<resources>
    <string name="app_name">RalphLab2</string>
    <string name="title">Lease Or Rent Home Inc.</string>
    <string name="image">Main Image</string>
    <string name="slogan">Need a Home? We Got you Covered!!</string>
    <string name="enter">Continue</string>
    <string name="house">Housing Options</string>
    <string name="houses"><![CDATA[Housing Options  --->]]></string>
    <string name="menuText">\"Looking to relocate from an apartment to a modest single-family home that is in walking distance to restaurants, shops and stores.  As a working professional, we can provide you a low maintenance, newer home, in a quiet and friendly neighborhood. Come and join us, Let\'s Talk!</string>
    <string name="apt">Apartment</string>
    <string name="detached">Detached Home</string>
    <string name="semidetached">Semi-Detached Home</string>
    <string name="condo_apart">Condominium Apartment</string>
    <string name="town_house">Town House</string>
    <string name="apart">120 Town Haven Place</string>
    <string name="apart1">120 Town Haven Place</string>
    <string name="price1">$1860</string>
    <string name="houseImage">apt image</string>
    <string name="apart2">370 McCowan Road</string>
    <string name="price2">$1200</string>
    <string name="apart3">9 Bellamy Cres</string>
    <string name="price3">$1700</string>
    <string name="checkout">Checkout</string>
    <string name="dprice2">$2500</string>
    <string name="dprice1">$3000</string>
    <string name="dprice3">$4000</string>
    <string name="detached1">1200 Humber Avenue</string>
    <string name="detached2">22 Lakeshore</string>
    <string name="detached3">1 Mornisgside East</string>
    <string name="cdprice1">$3000</string>
    <string name="cdprice2">$2700</string>
    <string name="cdprice3">$2450</string>
    <string name="condo1">68 HighPark blvd</string>
    <string name="condo2">80 St. Germain</string>
    <string name="condo3">99 McNicoll Enterprise</string>
    <string name="semi1">285 Edwards Gate</string>
    <string name="semi2">40 St. Clair Street</string>
    <string name="semi3">39 Kennedy Commons</string>
    <string name="address1">6 West Rouge</string>
    <string name="sdprice1">$3200</string>
    <string name="sdprice2">$2800</string>
    <string name="sdprice3">$2100</string>
    <string name="monthly">Note: All prices where design for Monthly Payment.</string>
    <string name="address2">55 High Glenn Road</string>
    <string name="address3">3 Leaside Cres</string>
</resources>