<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RalphActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="@dimen/my_Dimen"
        android:layout_height="@dimen/my_Dimen"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/ralphEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_gravity="center"
        android:text="@string/enter"/>
</LinearLayout>
